--- a/resources/views/home/filtercode.html
+++ b/resources/views/home/filtercode.html
@@ -1,36 +1,24 @@
-
-<button type="button" class="btn btn-sm btn-light-primary me-3" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end">
-    <i class="ki-duotone ki-filter fs-2">
-        <span class="path1"></span>
-        <span class="path2"></span>
-    </i>{{__('Filter')}}</button>
-    <div class="menu menu-sub menu-sub-dropdown w-300px w-md-325px" data-kt-menu="true">
-        <div class="px-7 py-5">
-            <div class="fs-5 text-gray-900 fw-bold">Filter Options</div>
-        </div>
-        <div class="separator border-gray-200"></div>
-        <div class="px-7 py-5" data-kt-user-table-filter="form">
-            <div class="mb-10">
-                <label class="form-label fs-6 fw-semibold">Role:</label>
-                <select class="form-select form-select-solid fw-bold" data-kt-select2="true" data-placeholder="Select option" data-allow-clear="true" data-kt-user-table-filter="role" data-hide-search="true">
-                    <option></option>
-                    <option value="Administrator">Administrator</option>
-                    <option value="Analyst">Analyst</option>
-                    <option value="Developer">Developer</option>
-                    <option value="Support">Support</option>
-                    <option value="Trial">Trial</option>
-                </select>
-            </div>
-            <div class="mb-10">
-                <label class="form-label fs-6 fw-semibold">Two Step Verification:</label>
-                <select class="form-select form-select-solid fw-bold" data-kt-select2="true" data-placeholder="Select option" data-allow-clear="true" data-kt-user-table-filter="two-step" data-hide-search="true">
-                    <option></option>
-                    <option value="Enabled">Enabled</option>
-                </select>
-            </div>
-            <div class="d-flex justify-content-end">
-                <button type="reset" class="btn btn-light btn-active-light-primary fw-semibold me-2 px-6" data-kt-menu-dismiss="true" data-kt-user-table-filter="reset">Reset</button>
-                <button type="submit" class="btn btn-primary fw-semibold px-6" data-kt-menu-dismiss="true" data-kt-user-table-filter="filter">Apply</button>
-            </div>
-        </div>
+<div class="row g-9 mb-8">
+    <div class="d-flex flex-column mb-8 fv-row col-md-6">
+        <label class="d-flex align-items-center fs-6 fw-semibold mb-2">
+                <span class="required">Requisition Title</span>
+        </label>
+        <input type="text" value="{{ $requisition->name }}" class="form-control form-control-solid" name="name" />
+        <div id="name{{ $requisition->id }}"></div>
     </div>
+    
+    <div class="d-flex flex-column mb-8 fv-row col-md-6">
+        <label class="d-flex align-items-center fs-6 fw-semibold mb-2">
+                <span class="required">Requisition Category</span>
+        </label>
+        <div class="d-flex">
+            <select id="requisition_category" class="form-select me-2" name="requisitionCategoryId"  data-allow-clear="true" data-placeholder="Select a category">
+                <option></option>
+                @foreach ($departments as $department)
+                    <option value="{{ $department->id }}" {{ $requisition->requisitionCategoryId == $department->id ? 'selected' : '' }}>{{ $department->name }}</option>
+                @endforeach
+            </select>
+        </div> 
+        <div id="requisitionCategoryId{{ $requisition->id }}"></div>
+    </div>
+</div>
