--- a/resources/views/home/filtercode.html
+++ b/resources/views/home/filtercode.html
@@ -1,24 +1,15 @@
-<div class="row g-9 mb-8">
-    <div class="d-flex flex-column mb-8 fv-row col-md-6">
-        <label class="d-flex align-items-center fs-6 fw-semibold mb-2">
-                <span class="required">Requisition Title</span>
-        </label>
-        <input type="text" value="{{ $requisition->name }}" class="form-control form-control-solid" name="name" />
-        <div id="name{{ $requisition->id }}"></div>
-    </div>
-    
-    <div class="d-flex flex-column mb-8 fv-row col-md-6">
-        <label class="d-flex align-items-center fs-6 fw-semibold mb-2">
-                <span class="required">Requisition Category</span>
-        </label>
-        <div class="d-flex">
-            <select id="requisition_category" class="form-select me-2" name="requisitionCategoryId"  data-allow-clear="true" data-placeholder="Select a category">
-                <option></option>
-                @foreach ($departments as $department)
-                    <option value="{{ $department->id }}" {{ $requisition->requisitionCategoryId == $department->id ? 'selected' : '' }}>{{ $department->name }}</option>
-                @endforeach
-            </select>
-        </div> 
-        <div id="requisitionCategoryId{{ $requisition->id }}"></div>
-    </div>
-</div>
+
+// Fetch recipients
+$recipients = User::whereIn('role', ['project_manager', 'director'])->pluck('email');
+
+// Send email notification
+foreach ($recipients as $email) {
+    Mail::to($email)->send(new RequisitionNotificationMail([
+        'projectName' => $requisition->requisitionProject->projectName,
+        'requisitionName' => $requisition->name,
+        'submittedBy' => auth()->user()->name,
+        'requisition_items' => $requisitionItems,
+        'totalAmount' => $totalAmount,
+        'description' => $request->description,
+    ]));
+}
